@@ -7,7 +7,7 @@
 # A copy of this file is pasted into the beginning of texi2html by
 # running './configure'.
 #
-# $Id: html.init,v 1.49 2010-06-12 10:30:15 pertusus Exp $
+# $Id: html.init,v 1.50 2010-06-21 07:03:15 pertusus Exp $
 
 use strict;
 
@@ -1981,8 +1981,7 @@ sub html_simplify_text($)
 
 # formats a menu entry description, ie the text appearing after the node
 # specification in a menu entry an spanning until there is another
-# menu entry, an empty line or some text at the very beginning of the line
-# (we consider that text at the beginning of the line begins a menu comment) 
+# menu entry, or empty line
 #
 # arguments:
 # the description text
